# gmux

./: .gitignore  package-lock.json  package.json  vite.config.js
docs/plans/: 2026-03-13-gmux-design.md  2026-03-13-gmux-implementation.md
src/: app.css  app.html
src-native/: Cargo.toml  install.sh
src-native/src/: config.rs  git.rs  main.rs  menu.rs  mouse_reporter.rs  notifications.rs  scrollback.rs  shortcuts.rs  terminal.rs  terminal_box.rs  theme.rs  usage.rs  workspace.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/config/: mod.rs
src-tauri/src/git/: mod.rs
src-tauri/src/pty/: mod.rs
src-tauri/src/usage/: mod.rs
src/lib/components/: TopBar.svelte
src/lib/components/insights/: DiffView.svelte  GitTab.svelte  InfoTab.svelte  InsightsView.svelte  UsageTab.svelte
src/lib/components/settings/: AiCliSettings.svelte  AppearanceSettings.svelte  KeybindingSettings.svelte  NotificationSettings.svelte  RateLimitSettings.svelte  SettingsModal.svelte  TerminalSettings.svelte
src/lib/components/sidebar/: ContextMenu.svelte  (+3 more)
src/lib/stores/: app.svelte.ts  git.svelte.ts  notifications.svelte.ts  persistence.svelte.ts  recent-paths.svelte.ts  settings.svelte.ts  status.svelte.ts  usage.svelte.ts
src/lib/types/: workspace.ts
src/lib/utils/: focus-trap.ts  format.ts  keybindings.ts  layout-helpers.test.ts  layout-helpers.ts  notification-detector.test.ts  notification-detector.ts  status-parser.test.ts  status-parser.ts
src/routes/: +page.svelte
(+10 files in other folders)
