[package]
name = "gmux"
version = "0.1.0"
description = "A terminal management app"
authors = ["Gakuseeii"]
edition = "2021"

[lib]
name = "gmux_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
portable-pty = "0.9"
git2 = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
anyhow = "1.0.102"
nix = { version = "0.29", features = ["signal", "process"] }
